--- a/assets/main.scss
+++ b/assets/main.scss
@@ -1,4 +1,5 @@
 @import "./variables";
+@import "./mixins";
 
 @import "../node_modules/bootstrap/scss/functions";
 @import "../node_modules/bootstrap/scss/variables";
@@ -15,4 +16,3 @@
 @import "../node_modules/bootstrap/scss/utilities";
 @import "../node_modules/bootstrap/scss/buttons";
 @import "../node_modules/bootstrap/scss/transitions";
-
