Starting rebrand + new article

--- a/docs/.vuepress/styles/index.styl
+++ b/docs/.vuepress/styles/index.styl
@@ -1,7 +1,7 @@
 .post img {
     display: block;
     height: 300px;
-    margin: 2rem auto;
+    // margin: 2rem auto;
 }
 
 // This is the image
@@ -20,4 +20,9 @@
 
 #disqus_thread {
     padding-top: 5rem;
+}
+
+table {
+    display: table;
+    width: 100%;
 }
