--- a/docs/.vuepress/styles/index.styl
+++ b/docs/.vuepress/styles/index.styl
@@ -1,7 +1,6 @@
 .post img {
     display: block;
     height: 300px;
-    // margin: 2rem auto;
 }
 
 // This is the image
@@ -25,4 +24,8 @@
 table {
     display: table;
     width: 100%;
+}
+
+.custom-block.tip {
+    border-color: $accentColor;
 }
