--- a/docs/.vuepress/styles/index.styl
+++ b/docs/.vuepress/styles/index.styl
@@ -29,3 +29,10 @@ table {
 .custom-block.tip {
     border-color: $accentColor;
 }
+
+.text-container {
+  height: 3.5rem;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
