Equality operator post

--- a/docs/.vuepress/styles/index.styl
+++ b/docs/.vuepress/styles/index.styl
@@ -36,3 +36,13 @@ table {
   align-items: center;
   justify-content: center;
 }
+
+h2, h3 {
+    padding: 2rem;
+    text-align: center;
+}
+
+/* Removing the contribute link in the navbar*/
+a.repo-link {
+    display:none !important;
+}
